tests/errors/not-equal.au
struct Class { a, b }

my_struct != new Class;